Fix rsponsive on smaller screen

--- a/src/components/Keypad.css
+++ b/src/components/Keypad.css
@@ -14,19 +14,19 @@
 
 @media screen and (min-width: 300px) {
   .keypad button {
-    font-size: 12pt;
+    font-size: 10pt;
     margin: 3px;
     padding: 2px;
-    min-width: 30px;
+    min-width: 22px;
   }
 }
 
 @media screen and (min-width: 400px) {
   .keypad button {
-    font-size: 18pt;
+    font-size: 16pt;
     margin: 3px;
-    padding: 5px;
-    min-width:30px;
+    padding: 2px;
+    min-width:28px;
   }
 }
 
